fix: writeFieldFiltered fieldFeatures/unwrapped, List.getFirst Android compat
1. writeFieldFiltered: merge fieldFeatures into features and handle
   unwrapped fields (consistent with writeFieldInternal)
2. JSONObject.getList: replace List.getFirst() with list.get(0) for
   Android/Java 17 compatibility

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>